nullaway_error_619F4DAA-102B-4CB7-A765-BEFFFE2E9E5C.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/service/invoker/HttpServiceMethod.java:242: error: [NullAway] dereferenced expression typeLevelUrl is @Nullable
				return (typeLevelUrl + (!typeLevelUrl.endsWith("/") && !methodLevelUrl.startsWith("/") ? "/" : "") + methodLevelUrl);
				                                     ^
    (see http://t.uber.com/nullaway )
